# scv4

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Drawbridge.c  Drawbridge.h  Intro.c  Profiling.c  Prop.c  README.md  Sandblock.c  Sandblock.h  Simon.h  SimonCollision.c  Torch.c  Whip.c  Whip.h
.github/workflows/: ci.yml
assets/: chain.txt  col_definition  collision.tsx  drawbridge.plt  drawbridge_bg.tmx  drawbridge_bg.tsx  drawbridge_bg.vram  drawbridge_bridge.tmx  drawbridge_fg.vram  drawbridge_main.tmx  drawbridge_main.tsx  drawbridge_mg.vram  drawbridge_mg2.vram  drawbridge_water.tmx  hud.tmx  hud.tsx  hud.vram  moon.txt  pillar.txt  sandblock.txt  simon.txt  simon_map.txt  torch.sqx  torch.txt  water1.tsx  whip0.txt  whip0_map.txt
cmake/: FindTilengine.cmake
src/main/: Drawbridge.c  Drawbridge.h  GridSpriteset.c  GridSpriteset.h  Hud.c  Hud.h  Intro.c  Profiling.c  Profiling.h  Prop.c  Prop.h  Sandblock.c  Sandblock.h  Simon.c  Simon.h  SimonCollision.c  SimonCollision.h  Torch.c  Torch.h  Whip.c  Whip.h
src/test/: test_collision.c
